PMM-2646 Fix alignment of tools buttons in example section

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -533,6 +533,10 @@ table.metrics td span.sum {
   }
 }
 
+pre.renderjson {
+  margin-bottom: 0;
+}
+
 .pmm-button {
   display: flex;
   justify-content: center;
